# screenshot

./: .gitignore  BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  GifWidget.cpp  GifWidget.h  HotKeyWidget.cpp  HotKeyWidget.h  HotKeyWidget.ui  KeyMouseEvent.cpp  KeyMouseEvent.h  README.md  RapidOcrConfig.cmake  SettingWidget.cpp  SettingWidget.h  SettingWidget.ui  Shape.cpp  Shape.h  Tool.cpp  Tool.h  Tool.ui  TopWidget.cpp  TopWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc  resource.rc  screenshot.pro  screenshot_resource.rc
.github/workflows/: build-linux.yml
images/package/linux/: control  postrm  prerm
opencv/lib/linux/: libopencv_highgui.so.4.8.0  libopencv_imgcodecs.so.4.8.0
package/linux/: control  package.sh  postrm  screenshot.desktop
rapidocr/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrLiteImpl.h  OcrStruct.h  OcrUtils.h
rapidocr/lib/: libopencv_core.so.408  libopencv_imgcodecs.so.408  libopencv_imgproc.so.408
src/: BaseWindow.cpp  BaseWindow.h  BlockQueue.h  GifWidget.cpp  GifWidget.h  KeyMouseEvent.cpp  KeyMouseEvent.h  LongWidget.cpp  LongWidget.h  MySliderStyle.cpp  MySliderStyle.h  Ocr.cpp  Ocr.h  SettingWidget.cpp  SettingWidget.h  SettingWidget.ui  Shape.cpp  Shape.h  Tool.cpp  Tool.h  Tool.ui  TopWidget.cpp  TopWidget.h  gif.cpp  main.cpp  mainwindow.cpp  mainwindow.h
src/OcrImpl/: RapidOcr.cpp  RapidOcr.h  TencentOcr.cpp  TencentOcr.h
src/ui/: SettingWidget.ui
